compiler/testData/diagnostics/tests/override/MissingDelegate.fir.kt
class C : Base1 by <!UNRESOLVED_REFERENCE!>Base2<!>(1) {
  fun test() { }
}